# structom

./: .gitignore  readme.md
codegen/: Cargo.toml  readme.md
codegen/src/: js.rs  main.rs  rust.rs  utils.rs
codegen/src/js/: encoding.rs  root.rs  type_def.rs
codegen/src/rust/: encoding.rs  root.rs  type_def.rs  value.rs
js/: package.json  readme.md  tsconfig.json
js/src/: any.ts  buf.ts  general.ts  index.ts  number.ts  rich.ts
rust/: Cargo.toml
rust/src/: builtins.rs  declaration.rs  encoding.rs  errors.rs  fs_decl_provider.rs  lib.rs  parser.rs  stringify.rs  value.rs
rust/src/encoding/: any.rs  general.rs  item.rs  nb.rs  rich.rs
rust/src/parser/: declaration.rs  error.rs  mod.rs  rich_types.rs  tokenizer.rs  utils.rs  value.rs
spec/: binary-format.md  declarations.md  general-structures.md  index.md  object-notation.md  primitive-structures.md  primitive-types.md  rich-types.md  tables.md
structomer/: Cargo.toml  readme.md
structomer/src/: main.rs
