[package]
name = "structom-codegen"
description = "codegen for structom serialization"
version = "0.1.7"
edition = "2024"
license = "MIT"
repository = "https://github.com/aliibrahim123/structom"
readme = "./readme.md"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
structom = "0.1.6"
