[package]
name = "structom"
description = "efficient data format for all needs"
version = "0.1.10"
edition = "2024"
readme = "../readme.md"
license = "MIT"
repository = "https://github.com/aliibrahim123/structom"
documentation = "https://docs.rs/structom/"

[dependencies]
chrono = "0.4.43"
num-bigint = "0.4.6"
num-traits = "0.2.19"
